# structure-it

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LESSONS.md  README.md  SESSION_LOG.md  pyproject.toml  start.sh
data/: README.md
data/sample_policies/: README.md
data/sample_policies/full_dataset/: COMP-001_privacy_compliance.md  COMP-002_anti_corruption.md  FIN-001_expense_reimbursement.md  FIN-002_capital_expenditure.md  FIN-003_financial_authority_matrix.md  HR-001_code_of_conduct.md  HR-002_remote_work.md  HR-003_performance_management.md  IT-001_acceptable_use.md  IT-002_access_control.md  IT-003_information_security.md  LEG-001_conflict_of_interest.md  LEG-002_records_retention.md  metadata.csv  metadata.json
data/sample_policies/micro_dataset/: FIN-001_expense_reimbursement.md  HR-001_code_of_conduct.md  IT-001_access_control.md  metadata.csv  (+1 more)
docs/: INDEX.md  policy_requirements_guide.md  roadmap.md
docs/architecture/: graph-modeling.md  overview.md  scraping.md  star-schema.md  storage.md
docs/guides/: civic-data.md  testing.md
docs/implementation/: README.md  context-assembly.md  cross-domain.md  extraction-patterns.md  incremental-processing.md  multimodal.md  quality-validation.md  rag-patterns.md  schema-evolution.md
examples/: collect_civic_data.py  extract_academic_paper.py  extract_code_docs.py  extract_media_transcript.py  extract_meeting_notes.py  extract_policy_requirements.py  extract_recipe.py  extract_web_article.py  run_scrapy_civic.py
explorations/: genai-processors-analysis.md  langextract-analysis.md  test_extractors.py
explorations/policy/: policy_dataset.md  policy_project.md
reference_code/: embed_picodata_duckdb.py  load_picodata_duckdb.py
scripts/: debug_schema.py  generate_arxiv_dataset.py  generate_civic_dataset.py  generate_full_dataset.py  generate_metadata_only.py  generate_micro_dataset.py
server/: main.py
src/structure_it/: __init__.py  config.py
tests/: __init__.py  test_civic_schema.py  test_policy_extractor.py  test_policy_requirements.py  test_schemas.py  test_scrapy_integration.py  test_star_schema.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
(+50 files in other folders)
